...
          modifier = Modifier.fillMaxWidth().padding(16.dp),
          horizontalAlignment = Alignment.CenterHorizontally) {
            Text(context.getString(R.string.confirmAddMealCancel))
            PrimaryButton(
                text = context.getString(R.string.confirmDiscard),
                onClick = goBack,
                modifier = Modifier.testTag("GoBack"))
            PrimaryButton(
                text = context.getString(R.string.denyRequest),
                color = PrimaryPink,
                onClick = closeDialog,
                modifier = Modifier.testTag("DenyButton"))
          }
    }
  }
}

// @Composable
...
