...
 */
@Composable
fun IngredientTitle(title: String, onTitleChanged: (String) -> Unit) {
  TextField(
      value = title,
      onValueChange = onTitleChanged,
      placeholder = { Text("Enter an Ingredient...") },
      modifier = Modifier.fillMaxWidth().testTag("EnterIngredientName"))
}

// Function for previewing the popup page
// @Preview
// @Composable
...
